2000-11-06  Gary Houston  <ghouston@arglist.com>

	* popen.scm (open-process): bug fix: don't use
	close-all-ports-except to close ports in the child process, since
	it causes port buffers to be flushed.  they may be flushed again
	in the parent, causing duplicate output.  use a more elaborate
	method for setting up the child descriptors (thanks to David
	Pirotte for the bug report).
	standard file descriptors 0, 1, 2 in the child process
	are now set up from current-input-port etc., where possible.
	
2000-10-10  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* syncase.scm (eval):  string=? requires a string argument.
	Thanks to Dale P. Smith for the patch.

2000-10-15  Neil Jerram  <neil@ossau.uklinux.net>

	* optargs.scm: Fix typos in commentary for bound? and lambda*.

2000-10-10  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* session.scm (apropos, apropos-fold):  regexp-exec does not
	accept symbol arguments any more.  Thanks to Dale P. Smith for the
	patch.

2000-09-30  Gary Houston  <ghouston@arglist.com>

	* posix.scm (setgrent): pass #t, not #f.  thanks to
	Jacques A. Vidrine.

2000-09-29  Neil Jerram  <neil@ossau.uklinux.net>

	* documentation.scm (find-documentation-in-file): Modified
	according to changed format of guile-procedures.txt caused by my
	snarfing/makeinfo changes in libguile.

	* session.scm (help-doc): Improvements to (help) output: (i) a
	friendlier Emacs-style introduction line; (ii) where the help arg
	matches multiple documented entries, print an initial list of the
	entries for which documentation is found, before printing the
	actual documentation entries themselves.

2000-09-20  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm: Removed comment.  (Thanks to Brad Knotwell.)

2000-09-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* syncase.scm (putprop):  Use the high-level property interface.

2000-09-12  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* psyntax.ss (build-lexical-var): Use gentemp instead of gensym;
	Convert first argument to a string.
